--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="BIPS Technical College - Leading Technical Education" />
     <meta property="og:description" content="Discover world-class technical education at BIPS Technical College. Explore diploma and certificate programs, research opportunities, and vibrant campus life in Nairobi, Kenya." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+   <meta property="og:image" content="https://yourdomain.com/images/bips-banner.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@bips_technical" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://yourdomain.com/images/bips-banner.png" />
   </head>
 
   <body>
